fixing bug on horizontal scroll and improvments on pages breakpoints

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,7 +77,7 @@ footer,
 
 .window-secondary-container {
   max-width: 1200px;
-  min-width: 980px;
+  min-width: 900px;
   max-height: calc(100vh - 130px);
   overflow: scroll;
   border: 3px solid #c0c0c0;
@@ -138,8 +138,8 @@ footer,
   max-height: 100%;
   margin: 10;
   display: grid;
-  grid-template-columns: minmax(306px, 349px) minmax(349px, 500px) minmax(
-      306px,
+  grid-template-columns: minmax(300px, 349px) minmax(300px, 500px) minmax(
+      300px,
       349px
     );
   gap: 10;
@@ -171,7 +171,9 @@ footer,
   place-items: center;
 }
 .personal_info .avatar img {
-  width: 50%;
+  min-height: 100px;
+  width: auto;
+  max-width: 50%;
   border-radius: 50%;
   box-shadow: var(--border-window-outer), var(--border-window-inner);
 }
